--- a/quillen.tex
+++ b/quillen.tex
@@ -152,6 +152,10 @@ Consider the example of \(\CP^\infty_E\) for \(E\) a complex-oriented cohomology
 A cohomology theory \(E\) is \index{orientation}\textit{complex orientable} (i.e., it is able to receive a ring map from \(MU\)) precisely when \(\CP^\infty_E\) is a formal curve (i.e., it is a formal variety of dimension \(1\)).  A choice of \index{orientation}orientation \(MU \to E\) determines a coordinate \(\CP^\infty_E \cong \A^1\) via the first \index{Chern class}Chern class associated to the orientation. \qed
 \end{lemma}
 
+\begin{remark}\label{EvenPeriodicImplicesCplxO}
+An even-periodic ring spectrum is automatically complex-orientable: the Atiyah--Hirzebruch spectral sequence for the cohomology of \(\CP^\infty\) collapses.
+\end{remark}
+
 As in \Cref{RPinftyExampleForReal}, the formal scheme \(\CP^\infty_E\) has additional structure: it is a group.  We close this Lecture with some remarks about such objects.
 
 \begin{definition}\label{DefnFormalGps}
