--- a/sigma.tex
+++ b/sigma.tex
@@ -144,7 +144,7 @@ The \index{Dieudonn\'e module}Dieudonn\'e module of the Cartier dual of a formal
 
 \section{Special divisors and the special splitting principle}\label{MSUDay}
 
-Starting in this Lecture, after our extended interludes on chromatic homotopy theory and cooperations, we are going to return to thinking about bordism orientations directly.  To begin, we will summarize the various perspectives already adopted in \Cref{ComplexBordismChapter} when we were studying complex orientations of ring spectra.
+Starting in this Lecture, after our extended interludes on chromatic homotopy theory and cooperations, we return to thinking about bordism orientations directly.  To begin, we will summarize the various perspectives already adopted in \Cref{ComplexBordismChapter} when we were studying complex orientations of ring spectra.
 \begin{enumerate}
 \item (\Cref{DefnComplexOrientation}:) A \index{orientation!complex}complex--orientation of \(E\) is, definitionally, a map \(MUP \to E\) of ring spectra in the homotopy category.
 \item (\Cref{ComplexOrientationsInTermsOfTrivs}:) A complex--orientation of \(E\) is also equivalent to a multiplicative system of \index{Thom isomorphism}Thom isomorphisms for complex vector bundles.  Such a system is determined by its value on the universal line bundle \(\L\) over \(\CP^\infty\).  We can also phrase this algebro-geometrically: such a Thom isomorphism is the data of a trivialization of the \index{Thom sheaf}Thom sheaf \(\ThomSheaf{\L}\) over \(\CP^\infty_E\).\index{canonical bundle}
@@ -152,7 +152,7 @@ Starting in this Lecture, after our extended interludes on chromatic homotopy th
 \end{enumerate}
 We can summarize our main result about these perspectives as follows:
 \begin{theorem}[{\cite[Example 2.53]{AHSTheoremOfTheCube}}]\label{BUZTriumvirate}
-Take \(E\) to be \emph{complex--orientable}.  The functor
+Take \(E\) to be \emph{even-periodic} (hence complex-orientable, cf.\ \Cref{EvenPeriodicImplicesCplxO}).  The functor
 \begin{align*}
 \CatOf{AffineSchemes}_{/\Spec E_0} & \to \CatOf{Sets}, \\
 (\Spec T \xrightarrow{u} \Spec E_0) & \mapsto \left\{ \text{trivializations of \(u^* \ThomSheaf{\L}\) over \(u^* \CP^\infty_E\)} \right\}
@@ -165,7 +165,7 @@ The equivalence between (1) and (3)---i.e., between complex-orientations and \(E
 
 An analogous result holds for ring spectrum maps \(MU \to E\) and the line bundle \(1 - \L\), and it is proven in analogous way.  In particular, we will want a version of the splitting principle for virtual vector bundles of virtual rank \(0\).  Given a finite complex \(X\) and such a rank \(0\) virtual vector bundle, write \(\tilde V \co X \to BU\) for the classifying map.  Because \(X\) is a finite complex, there exists an integer \(n\) so that \(\tilde V = -(n \cdot 1 - V)\) for an honest rank \(n\) vector bundle \(V\) over \(X\).  Using \Cref{OriginalSplittingPrinciple}, the splitting \(f^* V \cong \bigoplus_{i=1}^n \L_i\) over \(Y\) gives a presentation of \(\tilde V\) as \[\tilde V = -(n \cdot 1 - V) = -\bigoplus_{i=1}^n (1 - \L_i).\]  Crucially, we have organized this sum \emph{entirely in terms of bundles classified by \(BU\)}, as each bundle \(1 - \L_i\) itself has the natural structure of a rank \(0\) virtual vector bundle.  This version of the splitting principle, together with our extended discussion of formal geometry, begets the following analogue of the previous result:
 \begin{theorem}[{\cite[Example 2.54]{AHSTheoremOfTheCube}, cf.\ also \cite[Lemma 6.2]{AndoStrickland}}]\label{BUTriumvirate}
-Take \(E\) to be complex--orientable.  The functor
+Take \(E\) to be even-periodic.  The functor
 \begin{align*}
 \CatOf{AffineSchemes}_{/\Spec E_0} & \to \CatOf{Sets}, \\
 (\Spec T \xrightarrow{u} \Spec E_0) & \mapsto \left\{ \text{trivializations of \(u^* \ThomSheaf{1 - \L}\) over \(u^* \CP^\infty_E\)} \right\}
@@ -227,12 +227,12 @@ Consider the element \(\beta^k \in kU_* = \Z[\beta]\).  The source of the induce
 
 The next space and Thom spectrum in the sequence are thus \(B\SU\) and \(M\SU\).  This case will be wholly amenable to analysis through methods we have developed in this Lecture, which is now our stated goal for the rest of this Lecture.  Our jumping off point for that story will be, again, a partial extension of the splitting principle.
 \begin{lemma}\label{SplittingPrincipleForBSU}
-Let \(X\) be a finite complex, and let \(\tilde V\co X \to BU\) classify a virtual vector bundle of rank \(0\) over \(X\).  Select a factorization \(\tilde{\tilde V}\co X \to B\SU\) of \(\tilde V\) through \(B\SU\).  Then, there is a space \(f\co Y \to X\), where \(f_E\co Y_E \to X_E\) is finite and flat, as well as a collection of line bundles \(\sheaf H_j\), \(\sheaf H'_j\) expressing a \(B\SU\)--internal decomposition\index{splitting principle!for BSU@for \(B\SU\)} \[\tilde{\tilde V} = -\bigoplus_{j=1}^n (1 - \sheaf H_j)(1 - \sheaf H'_j).\]
+Let \(X\) be a finite complex, and let \(\tilde V\co X \to BU\) classify a virtual vector bundle of rank \(0\) over \(X\).  Suppose that there is a factorization \(\tilde{\tilde V}\co X \to B\SU\) of \(\tilde V\) through \(B\SU\).  Then, there is a space \(f\co Y \to X\), where \(f_E\co Y_E \to X_E\) is finite and flat, as well as a collection of line bundles \(\sheaf H_j\), \(\sheaf H'_j\) expressing a \(B\SU\)--internal decomposition\index{splitting principle!for BSU@for \(B\SU\)} \[\tilde{\tilde V} = -\bigoplus_{j=1}^n (1 - \sheaf H_j)(1 - \sheaf H'_j).\]
 \end{lemma}
 \begin{proof}
-Begin by using \Cref{OriginalSplittingPrinciple} on \(V\) to get an equality of \(BU\)--bundles \[\tilde{\tilde V} = V' + \L_1 + \L_2 - n \cdot 1.\]  Adding \((1 - \L_1)(1 - \L_2)\) to both sides, this gives
+Begin by using \Cref{OriginalSplittingPrinciple} on \(V\) to get an equality of \(BU\)--bundles \[f^* \tilde{\tilde V} = V' + \L_1 + \L_2 - n \cdot 1.\]  Adding \((1 - \L_1)(1 - \L_2)\) to both sides, this gives
 \begin{align*}
-\tilde{\tilde V} + (1 - \L_1)(1 - \L_2) & = V' + \L_1 + \L_2 + (1 - \L_1)(1 - \L_2) - n \cdot 1 \\
+f^* \tilde{\tilde V} + (1 - \L_1)(1 - \L_2) & = V' + \L_1 + \L_2 + (1 - \L_1)(1 - \L_2) - n \cdot 1 \\
 & = V' + \L_1\L_2 - (n-1) \cdot 1.
 \end{align*}
 By thinking of \((1 - \L_j)\) as an element of \(kU^2(Y) = [Y, BU]\), we see that the product element \[(1 - \L_1)(1 - \L_2) \in kU^4(Y) = [Y, B\SU]\] has the natural structure of a \(B\SU\)--bundle and hence so does the sum on the left-hand side\footnote{In the language of the previous Case Study, we are making use of a certain Hopf ring \(\circ\)--product on \(\OS{kU}{2*}\).}.  The right-hand side is the rank \(0\) virtualization of a rank \((n-1)\) vector bundle, hence succumbs to induction.  Finally, because \(\SU(1)\) is the trivial group, there are no nontrivial complex line bundles with structure group \(\SU(1)\), grounding the induction.
@@ -280,10 +280,10 @@ B\SU_E \arrow{r} \arrow[equal]{d} & BU_E \arrow{r}{B\det} \arrow[equal]{d} & BU(
 \SDiv_0 \CP^\infty_E \arrow{r} & \Div_0 \CP^\infty_E \arrow{r}{\mathrm{sum}} & \CP^\infty_E,
 \end{tikzcd}
 \end{center}
-where the scheme ``\(\SDiv_0 \CP^\infty_E\)'' of \index{divisor!special}\textit{special divisors} is defined to parametrized those divisors which vanish under the summation map.  However, whereas the map \(BU(1)_E \to BU_E\) has an identifiable universal property---it presents \(BU_E\) as the universal formal group on the pointed curve \(BU(1)_E\)---the description of \(B\SU_E\) as a scheme of special divisors does not bear much immediate resemblance to a free object on the special divisor \((1 - [a])(1 - [b])\) classified by \[(\CP^\infty)^{\times 2}_E \xrightarrow{(1 - \L_1)(1 - \L_2)_E} B\SU_E \to BU_E = \Div_0 \CP^\infty_E.\]  Our task is thus exactly to justify this statement.
+where the scheme ``\(\SDiv_0 \CP^\infty_E\)'' of \index{divisor!special}\textit{special divisors} is defined to parametrize those divisors which vanish under the summation map.  However, whereas the map \(BU(1)_E \to BU_E\) has an identifiable universal property---it presents \(BU_E\) as the universal formal group on the pointed curve \(BU(1)_E\)---the description of \(B\SU_E\) as a scheme of special divisors does not bear much immediate resemblance to a free object on the special divisor \((1 - [a])(1 - [b])\) classified by \[(\CP^\infty)^{\times 2}_E \xrightarrow{(1 - \L_1)(1 - \L_2)_E} B\SU_E \to BU_E = \Div_0 \CP^\infty_E.\]  Our task is thus exactly to justify this statement.
 
 \begin{definition}\label{DefinitionOfC2G}
-If it exists, let \(C_2 \G\) denote the symmetric square of \(\Div_0 \G\), thought of as a module over the ring scheme \(\Div \G\).  This scheme has the property that a formal group homomorphism \(\phi\co C_2 \G \to H\) is equivalent data to a symmetric function \(\psi\co \G \times \G \to H\) satisfying a rigidity condition (\(\psi(x, 0) = 0\)) and a \(2\)--cocycle condition as in \Cref{TwoCocycleConditionForBSUBundles}.
+If it exists, let \(C_2 \G\) denote the symmetric square of \(\Div_0 \G\), thought of as a module over the ring scheme \(\Div \G\).  This scheme has the property that a formal group homomorphism \(\phi\co C_2 \G \to H\) is equivalent data to a symmetric function \(\psi\co \G \times \G \to H\) satisfying a rigidity condition (\(\psi(0, 0) = 0\)) and a \(2\)--cocycle condition as in \Cref{TwoCocycleConditionForBSUBundles}.
 \end{definition}
 
 \begin{theorem}[{Ando--Hopkins--Strickland, unpublished}]\label{SDivModelsC2}
@@ -303,7 +303,7 @@ for which there is a factorization of formal schemes
 \SDiv_0 \G \arrow{r}{\ker} & \Div_0 \G \arrow{r}{\sigma} & \G
 \end{tikzcd}
 \end{center}
-because \[\sigma((1 - [a])(1 - [b])) = (a + b) - a - b + 0 = 0.\]  One can check that a homomorphism \(\phi\co \SDiv_0 \G \to H\) pulls back to a function \(\psi\co \G \times \G \to H\) satisfying the properties of \Cref{DefinitionOfC2G}:
+because \[\sigma((1 - [a])(1 - [b])) = (a + b) - a - b + 0 = 0.\]  A homomorphism \(\phi\co \SDiv_0 \G \to H\) pulls back to a function \(\psi\co \G \times \G \to H\) satisfying the properties of \Cref{DefinitionOfC2G} as follows:
 \begin{itemize}
     \item To check rigidity, we have \[\psi(a, 0) = \phi((1 - [a])(1 - [0])) = \phi((1 - [a])(1 - 1)) = \phi(0) = 0.\]
     \item To check symmetry, we have \[\psi(a, b) = \phi((1 - [a])(1 - [b])) = \phi((1 - [b])(1 - [a])) = \psi(b, a).\]
@@ -364,18 +364,24 @@ Thus far, we have established the following families of isomorphisms:
 & & \Spec E_0(MU) & \cong C^1(\CP^\infty_E; \sheaf I(0)),
 \end{align*}
 where we have abusively abbreviated the sheaf of functions on \(\CP^\infty_E\) to \(\Gm\).  In order to fill in the missing piece, we exploit the torsor structure on Thom spectra discussed earlier.
-\begin{lemma}[{\cite[Theorem 2.50]{AHSTheoremOfTheCube}}]
+\begin{lemma}[{\cite[Theorem 2.50]{AHSTheoremOfTheCube}}]\label{MSUIsATorsor}
 There is a system of compatible maps
 \begin{center}
 \begin{tikzcd}
-\Spec E_0 B\SU \times \Spec E_0 M\SU \arrow{r} \arrow[shift left=3em]{d} \arrow[shift right=3em,equal]{d} & \Spec E_0 M\SU \arrow{d} \\
-C^2(\CP^\infty_E; \Gm) \times C^2(\CP^\infty_E; \sheaf I(0)) \arrow{r} & C^2(\CP^\infty_E; \sheaf I(0)),   
+\begin{array}{c}
+\Spec E_0 M\SU \\ \times \\ \Spec E_0 B\SU
+\end{array}
+\arrow{r} \arrow[shift left=3em]{d} \arrow[shift right=3em,equal]{d} & \Spec E_0 M\SU \arrow{d} \\
+\begin{array}{c}
+C^2(\CP^\infty_E; \sheaf I(0)) \\ \times \\ C^2(\CP^\infty_E; \Gm)
+\end{array}
+\arrow{r} & C^2(\CP^\infty_E; \sheaf I(0)),   
 \end{tikzcd}
 \end{center}
 where the horizontal maps are the action maps defining torsors, and the vertical maps are those described above.
 \end{lemma}
 \begin{proof}[Proof sketch]
-Recall the isomorphism \(T(\L \downarrow \CP^\infty) \simeq \Susp^\infty \CP^\infty\).  The main point of this claim is that the Thom diagonal for \(MU[2k, \infty)\) restricts to a very familiar diagonal:
+Recall the isomorphism \(T(\L \downarrow \CP^\infty) \simeq \Susp^\infty \CP^\infty\).  The main point of this claim is that the Thom diagonal for \(MU[2k, \infty)\) restricts to the Thom diagonal for \(\CP^\infty\), which agrees with its diagonal as a space:
 \begin{center}
 \begin{tikzcd}
 (\Susp^\infty \CP^\infty)^{\sm k} \arrow["\Delta"]{r} \arrow{d} & (\Susp^\infty \CP^\infty)^{\sm k} \sm \Susp^\infty_+ (\CP^\infty)^{\times k} \arrow{d} \\
@@ -391,7 +397,7 @@ literally multiply together to give the description of the action.  This multipl
 \end{proof}
 
 \begin{proof}[Proof of \Cref{BSUTriumvirate}]
-The claim of this Theorem is that the map \[\Spec E_0 M\SU \to C^2(\CP^\infty_E; \sheaf I(0))\] studied above is an isomorphism.  Any map of torsors over a fixed base is automatically an isomorphism.
+The claim of this Theorem is that the map \[\Spec E_0 M\SU \to C^2(\CP^\infty_E; \sheaf I(0))\] studied above is an isomorphism.  By \Cref{MSUIsATorsor} this is a map of torsors over a fixed base, hence is automatically an isomorphism.
 \end{proof}
 
 
@@ -428,7 +434,7 @@ Our definition of the scheme \(C_2 \G\) was by the formula \[C_2 \G = \Sym^2_{\D
 \end{remark}
 
 \begin{remark}
-In an algebraic direction, the reader is also advised to consider the short exact sequence \[0 \to I \to \Z[G] \to \Z \to 0\] as a model for the short exact sequence \[0 \to \Div_0 \G \to \Div \G \to \underline{\Z} \to 0.\]  The results we have pursued here (in particular, \Cref{SDivModelsC2}) have direct analogues in the setting of group--rings.
+The short exact sequence \[0 \to I \to \Z[G] \to \Z \to 0\] gives an algebraic analogue of the short exact sequence \[0 \to \Div_0 \G \to \Div \G \to \underline{\Z} \to 0.\]  The results we have pursued here (in particular, \Cref{SDivModelsC2}) have direct analogues in the setting of group--rings.
 \end{remark}
 
 
@@ -457,7 +463,7 @@ We now embark on an analysis of \(MU[6, \infty)\)--orientations in earnest.  As 
     \item If we specialize to a particularly simple formal group---such as \(\G_a\) and its associated cohomology theory \(\HFp\)---then we can use our talent for performing computations in algebraic \emph{topology} to completely exhaust the problem.  This should be thought of as the ``actual'' proof: as in \Cref{COableCoopnsII}, we will show that successfully transferring the guess result from Morava \(E\)--theory to the setting of ordinary cohomology entails the result for \emph{any} complex-orientable cohomology theory.
 \end{enumerate}
 
-In this Lecture, we will pursue the first avenue.  We begin by setting \(\Gamma\) to be a formal group of finite \(p\)--height of a field \(k\) of positive characteristic \(p\), and we let \(E = E_\Gamma\) denote the associated Morava \(E\)--theory.  Our main technical tool will be the Postnikov fibration \[\OS{H\Z}{3} \to BU[6, \infty) \to B\SU,\] and our main goals are to construct a model sequence of formal schemes, then show that \(E\)--theory is well-behaved enough that the formal schemes it constructs exactly match the model.
+In this Lecture, we will pursue the first avenue.  We begin by setting \(\Gamma\) to be a formal group of finite \(p\)--height of a field \(k\) of positive characteristic \(p\), and we let \(E = E_\Gamma\) denote the associated continuous Morava \(E\)--theory.  Our main technical tool will be the Postnikov fibration \[\OS{H\Z}{3} \to BU[6, \infty) \to B\SU,\] and our main goals are to construct a model sequence of formal schemes, then show that \(E\)--theory is well-behaved enough that the formal schemes it constructs exactly match the model.
 
 In the previous setting of \(M\SU\), we gained indirect access to the algebraic model \(C_2 \G\) by separately proving that it was modeled by \(\SDiv_0 \G\) and that this had a good comparison map to \(B\SU_E\).  This time, since we do not have access to \(C_3 \G\) or anything like it, we proceed by much more indirect means, along the lines of \Cref{CUpper3Exists}: we know that \(C^3(\G; \Gm)\) exists as an affine scheme, since we can explicitly construct it as a closed subscheme of the scheme of trivariate power series, and so we seek a map \[\Spec E_0 BU[6, \infty) \to C^3(\CP^\infty_E; \Gm)\] that does not pass through any intermediate cohomological construction.  Our main tool for accomplishing this is as follows:
 \begin{definition}
