notation in 5.5, pretty figure

--- a/sigma.tex
+++ b/sigma.tex
@@ -528,7 +528,7 @@ Thus far, we have constructed the solid maps in the following commutative diagra
 C^2(\CP^\infty_E; \Gm) \arrow["\delta"]{r} & C^3(\CP^\infty_E; \Gm) \arrow[densely dotted, "e"]{r} & \InternalHom{FormalGroups}((\CP^\infty_E)^{\wedge 2}, \G_m),
 \end{tikzcd}
 \end{center}
-where \(\G^{\sm n}\) denotes the \index{p divisible group@\(p\)--divisible group!alternating power}exterior \(n\){\th} power of \(\G\), the left-most vertical map is an isomorphism by \Cref{CharacterizationOfBSUUpperE}, and right-most vertical map is an isomorphism by \Cref{EThyOfEMSpaces}.  We would like to enrich this diagram to an isomorphism of short exact sequences, and to do so we need to finish constructing the sequences themselves---we need a horizontal map \(e\) making the diagram commute.
+where \(\G^{\sm n}\) denotes the \index{p divisible group@\(p\)--divisible group!alternating power}exterior \(n\){\th} power of \(\G\), the left-most vertical map is an isomorphism by \Cref{CharacterizationOfBSUUpperE}, and right-most vertical map is an isomorphism by \Cref{EThyOfEMSpaces}.  We would like to promote this diagram to an isomorphism of short exact sequences, and to do so we need to finish constructing the sequences themselves---we need a horizontal map \(e\) making the diagram commute.
 
 The idea behind the construction of \(e\) is to pretend that \(\widehat \Pi_3\) is an isomorphism, so that we could completely detect \(e\) by comparing the image of the identity point on \(\Spec E_0 BU[6, \infty)\) through \(\widehat \Pi_3\) to the image of the same identity point through the maps \[\Spec E_0 BU[6, \infty) \to \Spec E_0 \OS{H\Z}{3} \to \CatOf{FormalGroups}((\CP^\infty_E)^{\sm 2}, \Gm).\]  Using our calculation that \((\CP^\infty_E)^{\sm 2}\) is a \index{p divisible group@\(p\)--divisible group}\(p\)--divisible group, we see that we can further restrict attention to the torsion subgroups \[(\CP^\infty_E)^{\sm 2}[p^j] = (BS^1[p^j]_E)^{\sm 2}\] which filter it, corresponding to analyzing the bundle classified by the restriction \[BS^1[p^j]^{\sm 2} \xrightarrow{\mu} \OS{HS^1[p^j]}{2} \xrightarrow{\beta_j} \OS{H\Z}{3} \xrightarrow{\gamma} \OS{kU}{6}.\]  Using the abbreviation \(B_j = BS^1[p^j]\), our summary goal is to find an express description of a map \(d\) making the following square commute:
 \begin{center}
@@ -943,10 +943,12 @@ There is a second standard embedding of a complex elliptic curve into projective
         \begin{scope}[rotate=60, scale=1/2]
           \spiral{#1-1}
         \end{scope}
-        \draw[very thick,red] (2,0) arc (30:90:1.9);
+        \draw[very thick,red] (2,0) arc (30:85:1.9);
       \fi
     }
-    \spiral{6}
+    \begin{scope}[rotate=-60, scale=2]
+      \spiral{6}
+    \end{scope}
     \fill (0:2) circle (0.12) ++(0.26,0.26) node {\(1\)};
     \fill (60:1) circle (0.12) ++(0,-0.32) node {\(q\)};
     \fill[opacity=0.5] (2,-3.464) circle (0.12) ++(-0.26,0.26) node {\(q^{-1}\)};
@@ -1029,10 +1031,10 @@ For \(N > 1\), this map is an embedding. \qed
 \end{theorem}
 
 \begin{example}
-Let us expand this in the case of \(N = 2\).  The four functions involved are labeled \[\theta_{q^2}^{0,0}, \theta_{q^2}^{0,1/2}, \theta_{q^2}^{1/2,0}, \theta_{q^2}^{1/2,1/2},\] and we record their zero loci in \Cref{ThetaFunctionsTable}.  The image of \(f_{(2)}\) in \(\P^{2^2 - 1}(\C)\) is cut out by the equations
+In the case of \(N = 2\), the four functions involved are \[\theta_{q^2}^{0,0}, \theta_{q^2}^{0,1/2}, \theta_{q^2}^{1/2,0}, \theta_{q^2}^{1/2,1/2},\] and we record their zero loci in \Cref{ThetaFunctionsTable}.  The image of \(f_{(2)}\) in \(\P^{2^2 - 1}(\C)\) is cut out by the equations\footnote{This amounts to a projectivization of the embedding \(S^1 \times \S^1 \to \R^2 \times \R^2\).}
 \begin{align*}
 A^2 x_0^2 & = B^2 x_1^2 + C^2 x_2^2, &
-A^2 x_3^2 & = C^2 x_1^2 - B^2 x_2^2,
+A^2 x_3^2 + B^2 x_2^2 & = C^2 x_1^2,
 \end{align*}
 where
 \begin{align*}
@@ -1065,7 +1067,7 @@ Zero locus & \(-q^{1+2\Z}\) & \(q^{1+2\Z}\) & \(-q^{2\Z}\) & \(q^{2\Z}\) \\
 This embedding of \(E_\Lambda\) as an intersection of quadric surfaces in \(\CP^3\) is quite different from the Weierstrass embedding.  Nonetheless, the embeddings are analytically related.  Namely, there is an equality \[\frac{\mathrm d^2}{\mathrm dz^2} \log \theta_q(u) = \wp_\Lambda(z).\]  Separately, Weierstrass considered a function \(\sigma_\Lambda\), defined by \[\sigma_\Lambda(z) = z \prod_{\omega \in \Lambda \setminus 0} \left( 1 - \frac{z}{\omega} \right) \cdot \exp \left[ \frac{z}{\omega} + \frac{1}{2} \left( \frac{z}{\omega} \right)^2 \right],\] which also has the property that its second logarithmic derivative is \(\wp\) and so is ``basically \(\theta_q^{1/2,1/2}\)''.  In fact, any meromorphic function on the elliptic curve $E_\Lambda$ can be written in the form \[c \cdot \prod_{i=1}^n \frac{\sigma_\Lambda(z - a_i)}{\sigma_\Lambda(z - b_i)}.\]
 \end{remark}
 
-Both of these embeddings enjoy algebraic analogues.  The usual proof that all abelian varieties are projective is a kind of generalization of the Weierstrass embedding~\cite[Section I.6]{Milne}, \cite[Remark II.7.8.2]{Hartshorne}: from a line bundle on \(A\) one can extract a very ample line bundle \(\L\), then carefully construct some generating global sections to get an embedding into \(\P(\L^{\oplus n})\).  In the \(\theta\)--function version, not only is there a generalization of the embedding but it enjoys a certain canonicality: Weil showed that quasiperiodic functions on an arbitrary complex abelian variety\index{abelian variety} are characterized uniquely as an irreducible representation for a certain group, that this representation admits a separate canonical presentation and with it a canonical basis, that the functions corresponding to this basis under the isomorphism can be used to construct an embedding as above, and finally that the functions obtained in this way in the case of an elliptic curve recover the classical $\theta$--functions~\cite{WeilTheta,Cartier}.  Mumford showed further that there is a wholly algebraic analogue of this collection of results~\cite{MumfordEquationsI,Tate}.\footnote{Mumford used this approach to say much more.  The fixed representation is unchanging even as the abelian variety is varied, and hence the embeddings of the abelian varieties all target the same projective space.  More than this, a given embedding is determined by the image of the identity point on the abelian variety (the ``$\theta$--null point''), as the coefficients of the relevant generalizations of the Jacobi quartics can be deduced from it (cf.\ the formulas for $A$, $B$, and $C$), altogether giving an effective description of the \emph{moduli} of abelian varieties by a generalization of the Jacobi \emph{relation}~\cite{MumfordEquationsII,MumfordEquationsIII}.  Polishchuk gives an account of many of these ideas from an unusual and remarkable perspective~\cite{Polishchuk}.}  The full extent of this story is far beyond our scope, but a critical theorem sitting at the heart of both of these approaches is:
+Both of these embeddings enjoy algebraic analogues.  The usual proof that all abelian varieties are projective is a kind of generalization of the Weierstrass embedding~\cite[Section I.6]{Milne}, \cite[Remark II.7.8.2]{Hartshorne}: from a line bundle on \(A\) one can extract a very ample line bundle \(\L\), then carefully construct some generating global sections to get an embedding into \(\P(\L^{\oplus n})\).  In the \(\theta\)--function version, not only is there a generalization of the embedding but it enjoys a certain canonicality: Weil showed that quasiperiodic functions on an arbitrary complex abelian variety\index{abelian variety} are characterized uniquely as an irreducible representation for a certain group, that this representation admits a separate canonical presentation and with it a canonical basis, that the functions corresponding to this basis under the isomorphism can be used to construct an embedding as above, and finally that the functions obtained in this way in the case of an elliptic curve recover the classical $\theta$--functions~\cite{WeilTheta,Cartier}.  Mumford showed further that there is a wholly algebraic analogue of this collection of results~\cite{MumfordEquationsI,Tate}.\footnote{Mumford used this approach to say much more.  The fixed representation is unchanging even as the abelian variety is varied, and hence the embeddings of the abelian varieties all target the same projective space.  More than this, a given embedding is determined by the image of the identity point on the abelian variety (the ``$\theta$--null point''), as the coefficients of the relevant generalizations of the Jacobi quartics can be deduced from it (cf.\ the formulas for $A$, $B$, and $C$), altogether giving an effective description of the \emph{moduli} of abelian varieties by a generalization of the Jacobi relation~\cite{MumfordEquationsII,MumfordEquationsIII}.  Polishchuk gives an account of many of these ideas from an unusual and remarkable perspective~\cite{Polishchuk}.}  The full extent of this story is far beyond our scope, but a critical theorem sitting at the heart of both of these approaches is:
 \begin{theorem}[{``Theorem of the Cube'', \cite[Theorem I.5.1]{Milne}}]\label{Theta3IsTrivial}\index{cubical structure!theorem of the cube}\index{theta structure@\(\Theta\)--structure|see {cubical structure}}
 Let \(A\) be an abelian variety, let \(p_i: A \times A \times A \to A\) be the projection onto the \(i\){\th} factor, and let \(p_{ij} = p_i +_A p_j\), \(p_{ijk} = p_i +_A p_j +_A p_k\).  Then for any invertible sheaf \(\L\) on \(A\), the sheaf \[\Theta^3(\L) := \frac{p_{123}^* \L \otimes p_1^* \L \otimes p_2^* \L \otimes p_3^* \L}{p_{12}^* \L \otimes p_{23}^* \L \otimes p_{31}^* \L \otimes p_\emptyset^* \L} = \bigotimes_{I \subseteq \{1, 2, 3\}} (p_I^* \L)^{(-1)^{|I| - 1}}\] on \(A \times A \times A\) is trivial.  If \(\L\) is rigid (i.e., it has a specified trivialization at the identity point of \(A\)), then \(\Theta^3(\L)\) is \emph{canonically} trivialized by a section \(s(A; \L)\). \qed
 \end{theorem}
